--- a/src/components/college/College.css
+++ b/src/components/college/College.css
@@ -7,7 +7,7 @@
     margin-bottom: 25px;
   }
 .collegeTitleSub{
-    margin-left: 42%;
+    margin-left: 43%;
     margin-bottom: 1%;
     margin-top: 1%;
   }
@@ -31,4 +31,7 @@
 }
 .collegeCard{
     margin-bottom: 3% ;
+}
+.addTitleForm {
+  margin-left: 38%;
 }
