--- a/src/components/paymentpage/Payment.css
+++ b/src/components/paymentpage/Payment.css
@@ -1,4 +1,19 @@
-.formPaymentTitle{
-    margin-top: 5%;
-    margin-left:30% ;
-  }
+.addPaymentButton{
+  margin-left: 43%;
+  margin-bottom: 25px;
+}
+.paymentTitle{
+  margin-left: 32%;
+  margin-bottom: 25px;
+}
+
+.paymentButtonFlex{
+  display: flex;
+  justify-content: flex-end;
+  margin: 1%;
+  margin-top: -7%;
+}
+.paymentButton{
+  margin: 1.3%;
+
+}
