--- a/src/components/chart/Chart.css
+++ b/src/components/chart/Chart.css
@@ -4,8 +4,6 @@
 }
 
 .chartTitle{
-    margin: auto;
-    margin-left: 40%;
-    margin-bottom: 5%;
-    margin-top: 1% ;
+    text-align: center;
+    margin-bottom: 3%;
 }
