--- a/src/components/college/College.css
+++ b/src/components/college/College.css
@@ -3,13 +3,12 @@
     margin-bottom: 25px;
   }
 .collegeTitle{
-    margin-left: 38%;
-    margin-bottom: 25px;
+    text-align: center;
+    margin-bottom: 26px;
+    margin-top: 1%;
   }
 .collegeTitleSub{
-    margin-left: 43%;
-    margin-bottom: 1%;
-    margin-top: 1%;
+    text-align: center;
   }
 
 .parentButton{
