--- a/src/components/paymentpage/Payment.css
+++ b/src/components/paymentpage/Payment.css
@@ -3,8 +3,7 @@
   margin-bottom: 25px;
 }
 .paymentTitle{
-  margin-left: 32%;
-  margin-bottom: 25px;
+  text-align: center;
 }
 
 .paymentButtonFlex{
