--- a/src/index.css
+++ b/src/index.css
@@ -40,5 +40,32 @@ code {
 }
 
 .deleteBtn{
-  background-color: #e41a1c ;
+  background-color: red ;
+}
+
+.redText{
+  color:#e41a1c;
+}
+.greenText{
+  color:#4daf4a;
+}
+.blueText{
+  color:#377eb8;
+}
+
+.costbtn{
+  background: #e41a1c;
+}
+.paymentbtn{
+  background: #377eb8;
+}
+.graphbtn{
+  background: #4daf4a;
+}
+
+.card{
+  border-style: solid;
+  border-width: 4px;
+  border-color: #999999;
+
 }
