--- a/src/components/college/College.css
+++ b/src/components/college/College.css
@@ -3,11 +3,12 @@
     margin-bottom: 25px;
   }
 .collegeTitle{
-    text-align: center;
+    margin-left: 38%;
     margin-bottom: 26px;
     margin-top: 1%;
   }
 .collegeTitleSub{
+   
     text-align: center;
   }
 
